--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 @charset "UTF-8";
+
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+* {
+    margin: 0px;
+    padding: 0px;
+    text-decoration: none;
+}
 
 body {
     margin: 0px;
@@ -26,27 +34,36 @@ header > p {
     font-size: 2vw;
 }
 
-.padrão {
+a {
+    color: white;
+    font-weight: bold;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+section {
     font-size: 4vw;
+    padding: 80px 20px;
 }
 
 .padrão > p {
     margin: 0px 10px 0px 10px;
-    padding: 130px 20px;
+    padding: 40px 20px;
 }
 
 .parallax {
-    padding: 80px 20px;
     height: 100%;
     color: white;
-    font-size: 4vw;
     box-shadow: inset 7px 7px 15px rgba(0, 0, 0, 0.527);
 }
 
 .parallax > p {
-    padding: 5px;
+    display: inline-block;
+    padding: 5px 20px;
     background-color: rgba(0, 0, 0, 0.418);
-    width: 50%;
+    border-radius: 20px;
 }
 
 #p1 {
@@ -79,14 +96,4 @@ footer > p {
     padding-bottom: 10px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-}
-
-a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-a:hover {
-    text-decoration: underline;
 }
